--- a/applied-electronics.X/nbproject/Makefile-genesis.properties
+++ b/applied-electronics.X/nbproject/Makefile-genesis.properties
@@ -1,10 +1,10 @@
 #
-#Thu Dec 18 17:51:16 CET 2025
+#Fri Dec 19 08:26:03 CET 2025
 default.languagetoolchain.version=3.10
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.20\\packs\\Microchip\\PIC18F-K_DFP\\1.13.292
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v3.10\\bin
-host.id=157v-6akb-ai
+host.id=2d1k-6isw-ig
 configurations-xml=6924d8f0c2b0f09b758be050f07d4ee0
 default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=5b9902b017a30efdeb77dee75a1e4e51
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
